[package]
name = "bot-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
hmac = "0.12.0"
sha2 = "0.10.1"
serde_json = "1.0.78"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
