[package]
name = "bot-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
hex = "0.4.3"
hmac = "0.12.0"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sha2 = "0.10.1"
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
